apps/xprikryl-ambulance-vp-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xprikryl-ambulance-vp-api
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway  # Hack to make it work for common cluster
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /virtual-patient-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: xprikryl-ambulance-vp-api
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /xprikryl-ambulance-vp-api-ui
      backendRefs:
        - group: ""
          kind: Service
          name: xprikryl-ambulance-vp-api
          port: 80
    - matches:
        - path:
            type: Exact
            value: /xprikryl-ambulance-vp-api-ui
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: xprikryl-ambulance-vp-api
          port: 80
